# lox

./: README.md
.github/workflows/: rlox-ci.yml
.helix/: config.toml
clox/: .gitignore  README.md  TODO.md  chunk.c  chunk.h  compile_commands.json  debug.c  justfile  main.c  memory.h  pratt_parser_stack.txt  test  test.c  value.h
clox/lib/: backtrace.c  backtrace.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  greatest.h  memory.c  memory.h  object.c  object.h  scanner.c  scanner.cpp  scanner.h  table.c  table.h  time_util.c  time_util.h  value.c  value.h  vm.c  vm.h
pylox/: .gitignore  README.md  pyproject.toml  test.lox
pylox/pylox/: __main__.py  interpreter.py  lox.py  parser.py  prelude.py
pylox/pylox/scanner/: ast_interpreter.py  ast_printer.py  lexer.py  lox_class.py  lox_environment.py  lox_function.py  lox_native_models.py  parser.py  resolver.py  scanner.py  tokens.py
pylox/scripts/: expression_generator.py
pylox/tests/: test_repl.py  test_script.py  test_variables.py
pylox/tests/__snapshots__/: test_repl.ambr  test_script.ambr  test_variables.ambr
pylox/tests/fixtures/repls/: boolean_control_flow.lox  variable_declaration.lox
pylox/tests/fixtures/scripts/: class.lox  for_loop.lox  functions.lox  functions_anonymous.lox  functions_fibonacci_series.lox  if_conditional.lox  while_loop.lox
rlox/: Cargo.toml  NOTES.md  README.md  scratch.lox
rlox/src/: chunk.rs  compiler.rs  debug.rs  hashtable.rs  lib.rs  main.rs  prelude.rs  scanner.rs  value.rs  vm.rs
rlox/tests/: test_jump.rs  test_scope.rs  test_scripts.rs
rlox/tests/common/: mod.rs
rlox/tests/common/snapshots/: test_jump__common__execution_without_name.snap  test_jump__common__test_if.snap  test_scope__common__execution-3.snap  test_scope__common__execution.snap  test_scope__common__scope_error.snap
rlox/tests/fixtures/: for-scope.lox  for.lox  if.lox  if_else.lox  or_and.lox  scope.lox  scope_error.lox  while.lox
rlox/tests/snapshots/: test_jump__if-2.snap  test_jump__if.snap  test_jump__if_else-2.snap  test_jump__if_else.snap  test_jump__or_and-2.snap  test_jump__or_and.snap  test_scope__scope-2.snap  test_scope__scope.snap  test_scope__scope_error-2.snap  test_scope__scope_error.snap  test_scripts__for-2.snap  test_scripts__for.snap  test_scripts__for_scope-2.snap  test_scripts__for_scope.snap  test_scripts__if.snap  test_scripts__if_else.snap  test_scripts__or_and.snap  test_scripts__scope.snap  test_scripts__scope_error-2.snap  test_scripts__scope_error.snap  test_scripts__while.snap
