[tool.pdm]

[project]
name = "pylox"
version = "0.1.0"
description = ""
authors = [
    {name = "Ankit Saini", email = "nnkitsaini@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python3 -m pylox"

[project.scripts]
pylox = "pylox.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
