[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest-mock>=3.10.0",
    "pytest>=7.3.1",
    "syrupy>=4.0.2",
]
dev = [
    "pdbpp>=0.10.3",
]

[project]
name = "pylox"
version = "0.1.0"
description = ""
authors = [
    {name = "Ankit Saini", email = "nnkitsaini@gmail.com"},
]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python3 -m pylox"
generate_lex = "python3 scripts/expression_generator.py --write"
test = "pytest"

[project.scripts]
pylox = "pylox.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
