[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
trace_execution = []
default = ["trace_execution"]

[dependencies]
anyhow = "1.0.71"
enum-as-inner = "0.6.0"
smallvec = "1.10.0"
